@@ -42,7 +42,14 @@ hunter or mark at discursivelabs.com
         </span>
         <h2>Instructions</h2>
         <div class="instructions">
-            Enter an equation into the box below and click "Graph!"   For each variable, a line will be graphed of the full range of that variable in the equation, with the other variables using the values selected below. </div>
+            Enter an equation into the box below and click "Graph!"   For each variable, a line will be graphed of the full range of that variable in the equation, with the other variables using the values selected below. 
+            Confused?  Check out our help resources 
+            <ul>
+            <li><a href="quickgrapher-help.html">Frequently Asked Questions</a></li>
+            <li><a href="quickgrapher-tutorials.html">Video Tutorials</a></li>
+            <li><a href="quickgrapher-walkthrough.html">Annoted Walkthrough</a></li>
+            </ul>
+            </div>
         <h2>Try It! <div class="examples" style="display: none;">» <span class="link" onclick="toggle('examples')">examples</span></div></h2>
         <!--div class="bar" style="width: 617px; margin-left: 22px;">
           <h2 style="display: inline;">Try It!</h2>
