@@ -1,0 +1,79 @@
+<!--
+Sliders.html, a simple javascript equation parser that creats dynamic sliders based on the equation
+based on original work by Hunter Davis, 2010
+Copyright Discursive Labs, LLC
+We still need to decided on a license for our internal tools we share with the community
+So if you'd like this to be gpl, send us an email
+hunter or mark at discursivelabs.com
+-->
+<!doctype html>
+<html lang="en">
+
+  <head>
+    <meta charset="utf-8"/>
+    <title>QuickGrapher Help</title>
+  
+    <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    
+    <link rel="stylesheet" media="all" href="./css/less-style.css"/>
+    <meta name="viewport" content="width=device-width; initial-scale=1"/>
+    <!-- Add "maximum-scale=1" to fix the Mobile Safari auto-zoom bug on orientation changes, 
+      but keep in mind that it will disable user-zooming completely. Bad for accessibility. -->
+    <!--script src="/js/obfs.js" type="text/javascript" charset="utf-8"></script-->
+  </head>
+
+  <body>
+    <div id="container">
+      <div id="inner">
+        <span style="width: 100%;">
+          <a href="http://www.quickgrapher.com">
+            <img class="logo" src="http://www.hunterdavis.com/quickgrapher/images/logo_1.png"></img>
+          </a>
+        </span>         
+                
+        <h2>QuickGrapher - A Quick Start Guide</h2>
+        <div class="instructions">
+        QuickGrapher is an equation graphing and interaction tool designed from the ground up to be easy to use and intuitive.  If you have never used QuickGrapher before, and are wondering where to begin, have a look at the two step by step annotated walkthroughs below.  Or, you can view a set of introductory videos here, and read a list of frequently asked questions here. <br/>
+        
+        <h2>Walkthrough 1 - Interacting With An Equation</h2>
+        <ol>
+        <li>Select An Equation From the Examples Box</li>
+        <li>Adjust the Variable Values with Sliders</li>
+        <li>Click Solve, or Enable "Dynamic Graph Updates"</li>
+        </ol>
+        
+        <h2>Walkthrough 2 - Creating an Equation</h2>
+        
+        </div>                   
+        
+ 
+        
+      </div>
+    </div>
+    <center>
+      Email: <font style="font-weight: bold">beta @ quickgrapher.com</font><br/>
+      Copyright 2011 Discursive Labs, LLC
+    </center>
+    <div id="beta_box" style="position:absolute; top: 0px; right: 0px; padding: 4px; font-weight: bold; font-size: 13pt; color: rgb(195,220,235); background-color: rgb(164,157,143); width: 120px; text-align: right; border: 1px solid rgb(144,136,125);">
+        <div style="text-align: center;">We love feedback & suggestions!</div><br/><br/>
+        <font style="font-size: 10pt;">Let us know your thoughts in an email to</font>
+        <div style="text-align: left; color: rgb(53, 52, 49); margin-bottom: -5px; padding-bottom: 10px; border-bottom: 1px solid black"><br/>beta <font style="color: rgb(255,255,255);">@</font><br/><font style="font-size: 10pt;">quickgrapher.com</font></div>
+    </div>
+    <script type="text/javascript"> 
+        // Google analytics
+        var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', 'UA-19995643-2']);
+        _gaq.push(['_trackPageview']);
+        
+        (function() {
+            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+        })();
+    </script>
+  </body>
+  
+</html>
+
