@@ -5,5 +5,8 @@ Implemented:
 --Social Media Features
 --Min and Max Functions
 --Temperature Conversion Equations C-f f-C
+--Help Page
+--Tutorials Page (Video)
+--Annotated Walkthrough (Images and text)
 Fixed:
 --Sliders Correctly Reposition If Min/Max bounds issues
